# Swig-TCL-CPP-example

./: CMakeLists.txt
cmake/: add_swig.cmake
src/: main.cpp
src/swigTest/: CMakeLists.txt  test.cpp  test.h  test.i  test.tcl
